--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "phpmailer/phpmailer": "^6.6"
     },
     "autoload": {
         "psr-4": {
