--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -1,11 +1,13 @@
 {
     "require": {
         "phpunit/phpunit": "^9",
-        "phpmailer/phpmailer": "^6.7"
+        "phpmailer/phpmailer": "^6.7",
+        "karriere/json-decoder": "^4.2",
+        "hiper/gateway-core": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app"
+            "App\\": ["app","app/modules/CalendarModeClasses"]
         }
     }
 }
