--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -1,13 +1,11 @@
 {
     "require": {
         "phpunit/phpunit": "^9",
-        "phpmailer/phpmailer": "^6.7",
-        "karriere/json-decoder": "^4.2",
-        "hiper/gateway-core": "^1.0"
+        "phpmailer/phpmailer": "^6.7"
     },
     "autoload": {
         "psr-4": {
-            "App\\": ["app","app/modules/CalendarModeClasses"]
+            "App\\": ["app","app/modules/CalendarModeClasses","app/modules/LoginClasses","app/modules/GeneralClasses"]
         }
     }
 }
