--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "phpunit/phpunit": "^9",
-        "phpmailer/phpmailer": "^6.7"
+        "phpmailer/phpmailer": "^6.7",
+        "linq/php-linq": "~1.0"
     },
     "autoload": {
         "psr-4": {
